@@ -1,2 +1,5 @@
+2007-12-23
+Added the "Installer"
+
 2007-12-22
 Added the "addword"
